# tmaf

./: .buildinfo  .gitignore  README.md  awesome-list.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: index.rst.txt
_sources/contents/: 02_architecture_design.rst.txt
_static/: documentation_options.js
contents/: 01_introduction.html  02_architecture_design.html
docs/source/: conf.py
docs/source/contents/: 01_introduction.rst
